--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -247,6 +247,12 @@
     					  	</div>
     					</li>
     					<li class="accordion-item" data-accordion-item>
+    					  	<a href="#caniFaq" class="accordion-title">Posso portare il mio cane?</a>
+    					  	<div class="accordion-content" data-tab-content id="caniFaq">
+    						  	<p>Accettiamo cani di tutte le taglie.</p>
+    					  	</div>
+    					</li>
+    					<li class="accordion-item" data-accordion-item>
     					  	<a href="#carteCreditoFaq" class="accordion-title">Quali carte accettate?</a>
     					  	<div class="accordion-content" data-tab-content id="carteCreditoFaq">
     						  	<p>Accettiamo Bancomat, Visa e Mastercard. <strong>Non accettiamo Amex</strong>.</p>
