--- a/menu.html
+++ b/menu.html
@@ -978,14 +978,14 @@
                                 </div>
                             </div>
                         </div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Ridopoco 50cl<span class="price ">6</span></h3>
     								<p class="">Birrificio Mukkeller. America pale ale 6,2%. Corpo leggero, massiccia luppolatura.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
                         <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
