--- a/asporto.html
+++ b/asporto.html
@@ -56,7 +56,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<p>Il lunedì non serviamo sushi.</p>
+    			<!-- <p>Il lunedì non serviamo sushi.</p> -->
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
@@ -1154,7 +1154,7 @@
     				<section class="grid-x grid-margin-x grid-margin-y" id="bevanda" data-magellan-target="bevanda">
     					<div class="small-12 cell">
     						<h2>Bevande</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
+    						<div class="grid-x small-up-2 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
     								<div class="card">
     									<div class="card-section">
@@ -1207,7 +1207,7 @@
     				<section class="grid-x grid-margin-x grid-margin-y" id="birra" data-magellan-target="birra">
     					<div class="small-12 cell">
     						<h2>Birra Artigianale in Bottiglia</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
+    						<div class="grid-x small-up-2 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
     								<div class="card">
     									<div class="card-section">
@@ -1260,7 +1260,7 @@
     				<section class="grid-x grid-margin-x grid-margin-y" id="vino" data-magellan-target="vino">
     					<div class="small-12 cell">
     						<h2>Vino</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
+    						<div class="grid-x small-up-2 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
     								<div class="card">
     									<div class="card-section">
@@ -1522,13 +1522,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiusi</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
@@ -1546,8 +1546,9 @@
     			<div class="cell">
     				<h1 class="subheader">Contatti</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
+    					<li><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
     					<li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
+    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
     				</ul>
     			</div>
     			<div class="cell">
