--- a/informazioni-legali.html
+++ b/informazioni-legali.html
@@ -447,13 +447,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiusi</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
@@ -471,8 +471,9 @@
     			<div class="cell">
     				<h1 class="subheader">Contatti</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
+    					<li><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
     					<li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
+    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
     				</ul>
     			</div>
     			<div class="cell">
