--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -75,13 +75,13 @@
             <div class="small-12 cell" id="innerNotesDiv2">
             </div>
             <div class="small-12 cell table-scroll" id="innerNotesDiv">
-                <table id="shiftsTable" style="table-layout: auto; width:auto; font-size: 0.875rem;white-space: nowrap;">
+                <table id="shiftsTable" style="table-layout: auto; width:auto; font-size: 0.875rem;">
                     <caption class="text-left" style="font-size: 1rem;padding-left:0rem;">Numero persone per turno</caption>
                     <thead>
                         <tr>
                             <th>Turno</th>
                             <th>Nr. Persone<br>Totali</th>
-                            <th>Nr. Persone<br>Prenotate Online</th>
+                            <th>Nr. Persone<br>Prenotate online</th>
                             <th>Nr. Persone<br>Prenotate da Scloby</th>
                         </tr>
                     </thead>
@@ -494,13 +494,13 @@
     			<div class="cell">
     				<h1 class="subheader">Orari</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><span>Lunedì:</span><time>19 - 23</time></li>
-    					<li><span>Martedì:</span><time>19 - 23</time></li>
-    					<li><span>Mercoledì:</span><time>19 - 23</time></li>
-    					<li><span>Giovedì:</span><time>19 - 23</time></li>
-    					<li><span>Venerdì:</span><time>19 - 23</time></li>
+    					<li><span>Lunedì:</span><time>19 - 22</time></li>
+    					<li><span>Martedì:</span><time>Chiusi</time></li>
+    					<li><span>Mercoledì:</span><time>19 - 22</time></li>
+    					<li><span>Giovedì:</span><time>19 - 22</time></li>
+    					<li><span>Venerdì:</span><time>19 - 22</time></li>
     					<li><span>Sabato:</span><time>19 - 23</time></li>
-    					<li><span>Domenica:</span><time>19 - 23</time></li>
+    					<li><span>Domenica:</span><time>19 - 22</time></li>
     				</ul>
     			</div>
     			<div class="cell">
@@ -518,8 +518,9 @@
     			<div class="cell">
     				<h1 class="subheader">Contatti</h1>
     				<ul class="orari-footer-schedule no-bullet">
-    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
+    					<li><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
     					<li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
+    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
     				</ul>
     			</div>
     			<div class="cell">
