--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,6 @@
     		<div class="small-12 medium-8 large-6 cell">
     			<h1 class="first-paragraph">Menù <small>(Coperto 1,5)</small></h1>
     			<button onclick="toggle_text()" type="button" id="showImage" class="button expanded">Mostra immagini</button>
-    			<p class="extra-space">Il lunedì non serviamo sushi.</p>
     		</div>
     	</div>
     </div>
@@ -1410,53 +1409,54 @@
         </footer>
     </div>
     <footer class="panel-footer">
-    	<div class="grid-container">
-    		<div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
-    			<div class="cell">
-    				<h1 class="subheader">Orari</h1>
-    				<ul class="orari-footer-schedule no-bullet">
-                        <li><span>Lunedì:</span><time>19 - 23</time></li>
-                        <li><span>Martedì:</span><time>19 - 23</time></li>
-                        <li><span>Mercoledì:</span><time>19 - 23</time></li>
-                        <li><span>Giovedì:</span><time>19 - 23</time></li>
-                        <li><span>Venerdì:</span><time>19 - 23</time></li>
+        <div class="grid-container">
+            <div class="grid-x grid-margin-x grid-margin-y small-up-2 large-up-4">
+                <div class="cell">
+                    <h1 class="subheader">Orari</h1>
+                    <ul class="orari-footer-schedule no-bullet">
+                        <li><span>Lunedì:</span><time>19 - 22</time></li>
+                        <li><span>Martedì:</span><time>Chiusi</time></li>
+                        <li><span>Mercoledì:</span><time>19 - 22</time></li>
+                        <li><span>Giovedì:</span><time>19 - 22</time></li>
+                        <li><span>Venerdì:</span><time>19 - 22</time></li>
                         <li><span>Sabato:</span><time>19 - 23</time></li>
-                        <li><span>Domenica:</span><time>19 - 23</time></li>
+                        <li><span>Domenica:</span><time>19 - 22</time></li>
                     </ul>
-    			</div>
-    			<div class="cell">
-    				<h1 class="subheader">Mappa del Sito</h1>
-    				<ul class="orari-footer-schedule no-bullet">
-    					<li class="item "><a href="index.html">Home</a></li>
-    					<li class=""><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
-    					<li class=""><a href="asporto.html">Ordina da Asporto</a></li>
-    					<li class="attuale"><a href="menu.html">Menù</a></li>
-    					<li class=""><a href="chi-siamo.html">Chi Siamo</a></li>
-    					<li class=""><a class="user-pg-btn">Il Mio Account</a></li>
-    					<li class=""><a href="informazioni-legali.html">Informazioni Legali</a></li>
-    				 </ul>
-    			</div>
-    			<div class="cell">
-    				<h1 class="subheader">Contatti</h1>
-    				<ul class="orari-footer-schedule no-bullet">
-    					<li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
-    					<li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
-    				</ul>
-    			</div>
-    			<div class="cell">
-    				<h1 class="subheader">Dove Siamo</h1>
-    				<p>
-    					<a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-    						<span itemprop="streetAddress">Via Centofinestre, 20</span>
-    						<br>
-    						<span itemprop="postalCode">60024</span>
-    						<span itemprop="addressLocality">Filottrano</span>
-    						<span itemprop="addressRegion">AN</span>
-    					</a>
-    				</p>
-    			</div>
-    		</div>
-    	</div>
+                </div>
+                <div class="cell">
+                    <h1 class="subheader">Mappa del Sito</h1>
+                    <ul class="orari-footer-schedule no-bullet">
+                        <li class="item "><a href="index.html">Home</a></li>
+                        <li class=""><a href="riserva-un-tavolo.html">Riserva un Tavolo</a></li>
+                        <li class=""><a href="asporto.html">Ordina da Asporto</a></li>
+                        <li class="attuale"><a href="menu.html">Menù</a></li>
+                        <li class=""><a href="chi-siamo.html">Chi Siamo</a></li>
+                        <li class=""><a class="user-pg-btn">Il Mio Account</a></li>
+                        <li class=""><a href="informazioni-legali.html">Informazioni Legali</a></li>
+                     </ul>
+                </div>
+                <div class="cell">
+                    <h1 class="subheader">Contatti</h1>
+                    <ul class="orari-footer-schedule no-bullet">
+                        <li><a href="https://api.whatsapp.com/send?phone=390718853384" target="_blank"><i class="lab la-whatsapp">&nbsp; </i>Whatsapp</a></li>
+                        <li><a href="tel:+390718853384"><i class="las la-phone">&nbsp; </i>071&nbsp;8853&nbsp;384</a></li>
+                        <li><a href="mailto:info@beerstrot.it"><i class="las la-envelope">&nbsp; </i>info@beerstrot.it</a></li>
+                    </ul>
+                </div>
+                <div class="cell">
+                    <h1 class="subheader">Dove Siamo</h1>
+                    <p>
+                        <a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                            <span itemprop="streetAddress">Via Centofinestre, 20</span>
+                            <br>
+                            <span itemprop="postalCode">60024</span>
+                            <span itemprop="addressLocality">Filottrano</span>
+                            <span itemprop="addressRegion">AN</span>
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="assets/js/app.js"></script>
     <script>
