--- a/asporto.html
+++ b/asporto.html
@@ -59,6 +59,11 @@
     			<!-- <p>Il lunedì non serviamo sushi.</p> -->
     		</div>
     	</div>
+        <!-- <div class="grid-x grid-margin-x">
+            <div class="small-12 medium-7 large-5 xxlarge-4 cell">
+                <p>Il martedì siamo chiusi.
+            </div>
+        </div> -->
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 medium-7 large-5 xxlarge-4 cell">
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
