--- a/menu.html
+++ b/menu.html
@@ -969,14 +969,14 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="cell">
+                        <!-- <div class="cell">
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Assaggio Solo 50cl<span class="price ">6</span></h3>
                                     <p class="">Birrificio Mukkeller. America pale ale 5,5%. Birra esplosiva facile da bere.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
