--- a/asporto.html
+++ b/asporto.html
@@ -39,7 +39,7 @@
     <!-- End Facebook Pixel Code -->
 </head>
 <body>
-    <div id="loading" hidden></div>
+    <div id="loading"></div>
     <nav id="hamburgerNav">
     	<ul class="menu-hamburger">
     		<li class="logo"><a href="https://www.beerstrot.it"><img class="img-logo" src="assets/img/svgs/logo.svg" alt="Logo Ca' Vecchia Beerstrot"><meta itemprop="name" content="Ca' Vecchia Beerstrot"></a></li>
@@ -56,17 +56,16 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
-    			<!-- <p>Il lunedì non serviamo sushi.</p> -->
     		</div>
     	</div>
-        <div class="grid-x grid-margin-x">
+        <!-- <div class="grid-x grid-margin-x">
             <div class="small-12 medium-7 large-5 xxlarge-4 cell">
                 <h3>Il martedì siamo chiusi.</h3>
                 <br><br><br>
             </div>
-        </div>
+        </div> -->
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 medium-7 large-5 xxlarge-4 cell" hidden>
+    		<div class="small-12 medium-7 large-5 xxlarge-4 cell">
     			<p>A che ora vuoi ritirare l'asporto? Ecco gli orari disponibili.<br><small>Puoi selezionare l'orario in ogni momento: anche durante la fase di checkout</small>.</p>
     			<div class="grid-x small-up-4 align-center extra-space">
     			    <div class="cell">
@@ -109,7 +108,7 @@
     		</div>
     	</div>
     </div>
-    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;" hidden>
+    <div id="magellanStickyTop" class="grid-container full" style="overflow-x: hidden;">
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
@@ -125,7 +124,7 @@
     		</div>
     	</div>
     </div>
-    <div id="menupage-text" hidden>
+    <div id="menupage-text">
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
