--- a/menu.html
+++ b/menu.html
@@ -949,7 +949,7 @@
                             <div class="card">
                                 <div class="card-section">
                                     <h3>Zona Mugnetti 50cl<span class="price ">6</span></h3>
-                                    <p class="">Birrificio Mukkeller. Saison 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: glutine</small></span></p>
+                                    <p class="">Birrificio Mukkeller. Belgian Ale 6%. Colore arancio chiaro, gusto morbido con sentori di arance e limoni.<span class=""><br><small>Allergeni: glutine</small></span></p>
                                 </div>
                             </div>
                         </div>
