--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -217,7 +217,7 @@
     						<a href="#celiachiaFaq" class="accordion-title">Sono celiaco. Siete attrezzati a riguardo?</a>
     						<div class="accordion-content" data-tab-content id="celiachiaFaq">
     							 <p>Purtroppo no: abbiamo una cucina unica quindi c'è contaminazione crociata da glutine.</p>
-    							 <p>Per chi è solo intollerante al glutine ed è sicuro di non avere problemi di contaminazione crociata, disponiamo di pane per hamburger e pietanze senza glutine.</p>
+    							 <p>Per chi è solo intollerante al glutine ed è sicuro di non avere problemi con la contaminazione crociata, disponiamo di pane per hamburger e pietanze senza glutine.</p>
     					  	</div>
     					</li>
     					<li class="accordion-item" data-accordion-item>
