form validation work around

--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -139,9 +139,9 @@
                         </label>
                     </div>
                     <div class="small-6 medium-4 cell">
-                        <label><strong>Quante persone*</strong>
-                            <select class="required error" id="quantity" disabled>
-                                <option>Seleziona Numero</option>
+                        <label id="quantityError"><strong>Quante persone*</strong>
+                            <select class="required error" id="quantity" disabled style="margin-bottom:0;">
+                                <option >Seleziona Numero</option>
                             </select>
                         </label>
                     </div>
