--- a/menu.html
+++ b/menu.html
@@ -121,6 +121,15 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/sashimi_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Gunkan Special">
+                                    <h3>Sashimi<span class="price ">14</span></h3>
+                                    <p>3 pezzi di salmone, 3 pezzi di tonno, 3 pezzi di branzino.<span class=""><br><small>Allergeni: Pesce</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     			<div class="small-12 cell">
@@ -191,6 +200,56 @@
     					</div>
     				</div>
     			</div>
+                <div class="small-12 cell">
+                    <h2>Sushi Uramaki Classici</h2>
+                    <div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/UramakiCalifornia_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Gambero e Salmone">
+                                    <h3>Uramaki California<span class="price ">10</span></h3>
+                                    <p>Salmone, avocado e cetriolo ricoperti da tobiko red (8 pezzi).<span class=""><br><small>Allergeni: Pesce</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/UramakiPhiladelphia_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Mandorle">
+                                    <h3>Uramaki Philadelphia<span class="price ">9</span></h3>
+                                    <p>Salmone in panko croccante e philadelphia guarniti con salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/UramakiSalmoneeAvocado_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Gambero Rosso">
+                                    <h3>Uramaki Salmone e Avocado<span class="price ">10</span></h3>
+                                    <p>Salmone, avocado e maionese (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Senape</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/UramakiTonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Tonno">
+                                    <h3>Uramaki Tonno<span class="price ">11</span></h3>
+                                    <p>Tonno, avocado e pomodoro secco ricoperti da tobiko red e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Senape</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/UramakiGamberoinPanko_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Mexico">
+                                    <h3>Uramaki Gambero in Panko<span class="price ">9</span></h3>
+                                    <p>Gambero in panko croccante e insalata guarniti con semi di sesamo, maionese e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Crostacei, Uova, Soia, Senape, Semi di sesamo</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     			<div class="small-12 cell">
     				<h2>Sushi Hosomaki</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -235,7 +294,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/HosomakiSpecialSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Hosomoki Special Salmone">
     								<h3>Hosomaki Special Salmone<span class="price ">10</span></h3>
-    								<p>Hosomaki di salmone ricoperto da philadelphia, fragole e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
+    								<p>Hosomaki di salmone ricoperto da philadelphia, fragole (o salmone a seconda della disponibiità) e salsa teriyaki (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Pesce, Soia, Latte, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -377,6 +436,24 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Edamame_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Patate Fritte">
+                                    <h3>Edamame<span class="price ">4</span></h3>
+                                    <p>Fagiolini di soia bolliti.<span class=""><br><small>Allergeni: Soia</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/AlgheGomaWakame_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Patate Fritte">
+                                    <h3>Alghe Goma Wakame<span class="price ">4</span></h3>
+                                    <p>Alghe croccanti.<span class=""><br><small>Allergeni: Soia, Semi di sesamo</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     		</section>
