--- a/menu.html
+++ b/menu.html
@@ -235,7 +235,7 @@
                                 <div class="card-section">
                                     <img src="assets/img/prod/UramakiTonno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Tonno">
                                     <h3>Uramaki Tonno<span class="price ">11</span></h3>
-                                    <p>Tonno, avocado e maionese ricoperti da semi di sesamo<span class=""><br><small>Allergeni: Uova, Pesce, Semi di sesamo</small></span></p>
+                                    <p>Tonno, avocado e maionese ricoperti da semi di sesamo (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Semi di sesamo</small></span></p>
                                 </div>
                             </div>
                         </div>
