--- a/menu.html
+++ b/menu.html
@@ -573,7 +573,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
@@ -590,7 +590,7 @@
     								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     				<!--	<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -609,7 +609,7 @@
     							</div>
     						</div>
     					</div> -->
-    					<div class="cell">
+    				<!--	<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -644,7 +644,7 @@
     								<p>Doppio burger di manzo (360 grammi), crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
