--- a/menu.html
+++ b/menu.html
@@ -732,7 +732,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema chantilly.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema al mascarpone e rum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -745,7 +745,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Crumble_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Crumble">
@@ -754,7 +754,7 @@
     							</div>
     						</div>
     					</div>
-    				</div>
+    				</div> -->
     			</div>
     		</section>
     <!-- inizio layout no immagini -->
