--- a/menu.html
+++ b/menu.html
@@ -591,7 +591,7 @@
     							</div>
     						</div>
     					</div> -->
-    				<!--	<div class="cell">
+    				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
@@ -609,7 +609,7 @@
     							</div>
     						</div>
     					</div> -->
-    				<!--	<div class="cell">
+    				    <!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -626,8 +626,8 @@
     								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div>
-    					<div class="cell">
+    					</div> -->
+    					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -663,6 +663,60 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Autunno_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno">
+                                    <h3>Autunno<span class="price ">11,9</span></h3>
+                                    <p>Burger di manzo (180 grammi), scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/AutunnoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Autunno Doppio">
+                                    <h3>Autunno Doppio<span class="price ">15,9</span></h3>
+                                    <p>Doppio burger di manzo (360 grammi), scamorza affumicata, speck croccante, crema di funghi.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Deciso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Deciso">
+                                    <h3>Deciso<span class="price ">11,9</span></h3>
+                                    <p>Burger di manzo (180 grammi), gorgonzola, guanciale, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/DecisoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Deciso Doppio">
+                                    <h3>Deciso Doppio<span class="price ">15,9</span></h3>
+                                    <p>Doppio burger di manzo (360 grammi), gorgonzola, guanciale, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Mantovano_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Mantovano">
+                                    <h3>Mantovano<span class="price ">11,9</span></h3>
+                                    <p>Burger di manzo (180 grammi), gorgonzola, speck croccante, crema di zucca, amaretto.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Frutta a guscio</small></span></p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/MantovanoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Mantovano Doppio">
+                                    <h3>Mantovano Doppio<span class="price ">15,9</span></h3>
+                                    <p>Doppio burger di manzo (360 grammi), gorgonzola, speck croccante, crema di zucca, amaretto.<span class=""><br><small>Allergeni: Glutine, Uova, Latte, Frutta a guscio</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     				</div>
     			</div>
     			<div class="small-12 cell">
@@ -732,7 +786,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Blondie_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Blondie">
     								<h3>Blondie<span class="price ">5</span></h3>
-    								<p>Brownie con nocciole. Servito con crema al mascarpone e rum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
+    								<p>Brownie con nocciole. Servito con crema al mascarpone e rhum.<span class=""><br><small>Allergeni: Frutta a Guscio, Glutine, Latte, Uova</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -745,6 +799,15 @@
     							</div>
     						</div>
     					</div>
+                        <div class="cell">
+                            <div class="card">
+                                <div class="card-section">
+                                    <img src="assets/img/prod/Birramisu_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Birramisù">
+                                    <h3>Birramisù<span class="price ">5</span></h3>
+                                    <p>Tiramisù con mascarpone artigianale. I biscotti vengono inzuppati nella birra stout.<span class=""><br><small>Allergeni: Glutine, Latte, Uova</small></span></p>
+                                </div>
+                            </div>
+                        </div>
     					<!-- <div class="cell">
     						<div class="card">
     							<div class="card-section">
