revert validation fix

--- a/riserva-un-tavolo.html
+++ b/riserva-un-tavolo.html
@@ -138,9 +138,9 @@
                         </label>
                     </div>
                     <div class="small-6 medium-4 cell">
-                        <label id="quantityError"><strong>Quante persone*</strong>
+                        <label><strong>Quante persone*</strong>
                             <select class="required error" id="quantity" disabled style="margin-bottom:0;">
-                                <option >Seleziona Numero</option>
+                                <option>Seleziona Numero</option>
                             </select>
                         </label>
                     </div>
@@ -150,12 +150,13 @@
                         <label style="margin-bottom:0" ><strong>Quale turno*</strong>
                             <div id="shiftGridL"></div>
                             <div class="grid-x small-up-2 required error" id="shiftGrid">
-                                <div class="cell bShift"><button type="button" class="button" disabled>19.00-21.30</button></div>
-                                <div class="cell bShift"><button type="button" class="button" disabled>19.30-22.00</button></div>
-                                <div class="cell bShift"><button type="button" class="button" disabled>20.00-22.30</button></div>
-                                <div class="cell bShift"><button type="button" class="button" disabled>20.30-23.00</button></div>
+                                <div class="cell bShift"><button type="button" class="button" disabled>19.00-21.00</button></div>
+                                <div class="cell bShift"><button type="button" class="button" disabled>19.30-21.30</button></div>
+                                <div class="cell bShift"><button type="button" class="button" disabled>20.00-22.00</button></div>
+                                <div class="cell bShift"><button type="button" class="button" disabled>20.30-22.30</button></div>
                                 <div class="cell bShift"><button type="button" class="button" disabled>21.00-23.00</button></div>
-                                <div class="cell bShift"><button type="button" class="button" disabled>21.30-23.00</button></div>
+                                <div class="cell bShift"><button type="button" class="button" disabled>21.30-23.30</button></div>
+                                <div class="cell bShift"><button type="button" class="button" disabled>22.00-23.30</button></div>
                             </div>
                         </label>
                         <h6>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</h6>
